Feature: 기본 세팅 및 엔티티 도메인 설정
